Improve Swagger Schemas and implement initial Roles controller
